{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 75,
  "lineage": "ef1e5f20-a5f6-1d0f-7623-15d33fad2c84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0923fa9dabee2548c",
            "domain": "vpc",
            "id": "eipalloc-0923fa9dabee2548c",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-77-127.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.77.127",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0789ee9dc2cc66aba",
            "domain": "vpc",
            "id": "eipalloc-0789ee9dc2cc66aba",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-101-146.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.101.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:internet-gateway/igw-0e127924a25dd81b0",
            "id": "igw-0e127924a25dd81b0",
            "owner_id": "095517857669",
            "tags": {
              "Name": "internet gateway",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "internet gateway",
              "Project": "demo-app"
            },
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:loadbalancer/app/Demo-ALG-tf/2dfea44f5cebea3e",
            "arn_suffix": "app/Demo-ALG-tf/2dfea44f5cebea3e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo-ALG-tf-1395347551.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:loadbalancer/app/Demo-ALG-tf/2dfea44f5cebea3e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo-ALG-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-058989fd55c38f72f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058ed36ec4b1d7bb8"
              },
              {
                "subnet_id": "subnet-0c8c96b21c9db0a17"
              }
            ],
            "subnets": [
              "subnet-058ed36ec4b1d7bb8",
              "subnet-0c8c96b21c9db0a17"
            ],
            "tags": {
              "Project": "demo-app",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "demo-app",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-02124698dc3e670ef",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:listener/app/Demo-ALG-tf/2dfea44f5cebea3e/95851219ccf8ce52",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:targetgroup/Demo-TargetGroup-tf/4c875eab9496fe5f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:listener/app/Demo-ALG-tf/2dfea44f5cebea3e/95851219ccf8ce52",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:loadbalancer/app/Demo-ALG-tf/2dfea44f5cebea3e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:targetgroup/Demo-TargetGroup-tf/4c875eab9496fe5f",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/4c875eab9496fe5f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:095517857669:targetgroup/Demo-TargetGroup-tf/4c875eab9496fe5f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0923fa9dabee2548c",
            "connectivity_type": "public",
            "id": "nat-061a80a974ce43564",
            "network_interface_id": "eni-08dc8e1fbe2e61a20",
            "private_ip": "10.10.1.166",
            "public_ip": "13.43.77.127",
            "subnet_id": "subnet-058ed36ec4b1d7bb8"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0789ee9dc2cc66aba",
            "connectivity_type": "public",
            "id": "nat-0aafba61aa8c85eac",
            "network_interface_id": "eni-0728411b199dfe044",
            "private_ip": "10.10.2.6",
            "public_ip": "13.41.101.146",
            "subnet_id": "subnet-0c8c96b21c9db0a17"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:route-table/rtb-03064821b735448f8",
            "id": "rtb-03064821b735448f8",
            "owner_id": "095517857669",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061a80a974ce43564",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:route-table/rtb-08eb61240ce1a4e8b",
            "id": "rtb-08eb61240ce1a4e8b",
            "owner_id": "095517857669",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aafba61aa8c85eac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:route-table/rtb-06e3301a21b67bc56",
            "id": "rtb-06e3301a21b67bc56",
            "owner_id": "095517857669",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e127924a25dd81b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet route table",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "public subnet route table",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b58cbf32e6a44b7",
            "route_table_id": "rtb-06e3301a21b67bc56",
            "subnet_id": "subnet-058ed36ec4b1d7bb8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5dd250faa9e09cb",
            "route_table_id": "rtb-06e3301a21b67bc56",
            "subnet_id": "subnet-0c8c96b21c9db0a17"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dbebcad9df7e189",
            "route_table_id": "rtb-03064821b735448f8",
            "subnet_id": "subnet-08c917fb1e0142024"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.prv_sub1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5137d12420fd787",
            "route_table_id": "rtb-08eb61240ce1a4e8b",
            "subnet_id": "subnet-0e91db4ff4552a238"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.prv_sub2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:security-group/sg-058989fd55c38f72f",
            "description": "SG for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058989fd55c38f72f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "095517857669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for ALB",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "SG for ALB",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:security-group/sg-05b69c1e3b32d05e3",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b69c1e3b32d05e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "095517857669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for web",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "SG for web",
              "Project": "demo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:subnet/subnet-08c917fb1e0142024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c917fb1e0142024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095517857669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "private_subnet1",
              "Project": "demo-app"
            },
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:subnet/subnet-0e91db4ff4552a238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91db4ff4552a238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095517857669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "private_subnet2",
              "Project": "demo-app"
            },
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:subnet/subnet-058ed36ec4b1d7bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058ed36ec4b1d7bb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "095517857669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "public_subnet1",
              "Project": "demo-app"
            },
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:subnet/subnet-0c8c96b21c9db0a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c96b21c9db0a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "095517857669",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "public_subnet2",
              "Project": "demo-app"
            },
            "vpc_id": "vpc-02124698dc3e670ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:095517857669:vpc/vpc-02124698dc3e670ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-01f4080dbe508c381",
            "default_route_table_id": "rtb-091979ab2285d7a0b",
            "default_security_group_id": "sg-03ac399186fb0eea0",
            "dhcp_options_id": "dopt-0ecb69aa6a211c49b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02124698dc3e670ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091979ab2285d7a0b",
            "owner_id": "095517857669",
            "tags": {
              "Name": "My Demo VPC",
              "Project": "demo-app"
            },
            "tags_all": {
              "Name": "My Demo VPC",
              "Project": "demo-app"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}